<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Home_RollCall_img"
        android:src="@mipmap/rollcallicon256"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Home_StartRollCall"
        android:id="@+id/Home_RollCall_txt"
        android:layout_below="@+id/Home_RollCall_img"
        android:layout_centerHorizontal="true" />





    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Home_set_img"
        android:src="@mipmap/personset256"
        android:background="#ffffff"
        android:layout_alignTop="@+id/Home_SeeList_img"
        android:layout_toStartOf="@+id/Home_note_img"
        android:layout_marginEnd="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Home_Set"
        android:id="@+id/Home_set_txt"
        android:layout_below="@+id/Home_set_img"
        android:layout_alignStart="@+id/Home_set_img"
        android:layout_marginStart="28dp" />








    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Home_SeeList_img"
        android:src="@mipmap/setlist256"
        android:background="#ffffff"

        android:layout_marginStart="28dp"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/Home_RollCall_txt"
        android:layout_toEndOf="@+id/Home_RollCall_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Home_SeeList"
        android:id="@+id/Home_SeeList_txt"
        android:layout_below="@+id/Home_SeeList_img"
        android:layout_alignStart="@+id/Home_SeeList_img" />








    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Home_note_img"
        android:src="@mipmap/memorandum256"
        android:background="#ffffff"

        android:layout_marginTop="44dp"
        android:layout_below="@+id/Home_SeeList_txt"
        android:layout_toStartOf="@+id/Home_SeeList_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Home_Note"
        android:id="@+id/Home_note_txt"
        android:layout_below="@+id/Home_note_img"
        android:layout_alignEnd="@+id/Home_RollCall_txt" />
</RelativeLayout>