<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/Dialog_Title_layout"
        android:background="#888484"

        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Extra_Add_People_Title"
            android:id="@+id/Extra_Dialog_Title"
            android:layout_marginStart="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Dialog_Title_layout"
        android:id="@+id/ExtraAdd_message_layout"
        android:background="#ffffff">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Extra_Add_People_Message"
            android:id="@+id/ExtraAdd_Dialog_Message"
            android:layout_centerHorizontal="true"
            android:textSize="15dp" />


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="#ffffff"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/ExtraAdd_message_layout"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:layout_weight="1"
            android:text="關閉"
            android:id="@+id/ExtraAdd_btn_close"
            android:layout_gravity="right"
            android:textColor="#8ed6ee"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/Extra_Add_People_btnOk"
            android:id="@+id/ExtraAdd_btn_ok"
            android:textColor="#8ed6ee"
            />
    </LinearLayout>

</RelativeLayout>